syntax = "proto3";


option java_package = "com.example.timehelm";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message TimeState {
  enum Activity {
      Creative = 0;
      Learning = 1;
      CampusMeetings = 2;
      Iterating = 3;
      Handling = 4;
  }
  message Tracking {
      google.protobuf.Timestamp startTime = 1;
      Activity activity = 2;
  }

  Tracking tracking = 1;

  int32 streakDays = 2;
  google.protobuf.Timestamp lastDayStreak = 3;

  float fucksTally = 4;

  int32 xp = 5;
}
